package com.example.solidprinciples.withoutsolid

class Address(
    val localAddress: String?,
    val homeAddress: String
)