package com.example.solidprinciples.withoutsolid

class Course(
    val name: String,
    val tenure: Int?,
    val department: Department,
)