package com.example.solidprinciples.withoutsolid

class Department(
    val name: String,
    val type: String, //Academic or Non - Academic
)