package com.example.solidprinciples.withoutsolid

class Student(
    val name: String,
    val age: Int,
    val dateOfBirth: String,
    val courseType: String,
    val department: Department,
    val currentSemester: Int,
    val address: Address,
)