@startuml
'https://plantuml.com/class-diagram

!define KO_KOTLIN
!define KO_ICON
skinparam class {
    BackgroundColor White
    ArrowColor SeaGreen
    BorderColor Black
}

class Staff {
    +name: String
    +type: String
    +department: Department
    +salary: Double
    +engageStudents(subject: String, students: List<Student>)
}

class Department {
    +name: String
    +type: String
}

class Address {
    +localAddress: String?
    +homeAddress: String
}

class Course {
    +name: String
    +tenure: Int?
    +department: Department
}

class College {
    +departments: List<Department>
    +staff: List<Staff>
    +students: MutableList<Student>
    +courses: List<Course>
    +registerStudent(student: Student)
    +assignStaffToDepartment(staff: Staff, department: Department)
}

class Student {
    +name: String
    +age: Int
    +dateOfBirth: String
    +courseType: String
    +department: Department
    +currentSemester: Int
    +address: Address
}

Staff "1" -- "1" Department : has >
College "1" -- "*" Department : has >
College "1" -- "*" Staff : has >
College "1" -- "*" Course : offers >
Course "1" -- "1" Department : belongs to >
Student "1" -- "1" Department : belongs to >
Student "1" -- "1" Address : lives at >
College "1" -- "*" Student : has >
@enduml